fix styling for MC items in case when the MC is wrapped into a P

--- a/components/corespring/multiple-choice/src/client/styles.less
+++ b/components/corespring/multiple-choice/src/client/styles.less
@@ -68,6 +68,7 @@
         }
       }
       .checkbox-choice {
+        line-height: 25px;
         .checkbox-button {
           -webkit-transform: scale(1, 1);
           -ms-transform: scale(1, 1);
@@ -81,8 +82,8 @@
           height: 10px;
           font-size: 19px;
           color: #555555;
-          left: 0px;
-          top: -4px;
+          left: -0.5px;
+          top: -3px;
           position: absolute;
         }
         }
@@ -97,6 +98,7 @@
           border: none;
           .radio-button {
             background: none;
+            line-height: 33px;
             &:after {
               font-size: 25px;
               font-family: FontAwesome;
@@ -105,7 +107,7 @@
               border: 0;
               position: absolute;
               top: -8px;
-              left: -1px;
+              left: -3px;
             }
           }
         }
@@ -119,6 +121,8 @@
             &:before {
               color: #ffffff;
               font-size: 20px;
+              left: 0px;
+              top: -2px;
             }
           }
         }
@@ -130,6 +134,7 @@
         .radio-choice {
           opacity: 1;
           border: none;
+          line-height: 30px;
           .radio-button {
             background: none;
             &:after {
@@ -140,7 +145,7 @@
               border: 0;
               position: absolute;
               top: -10px;
-              left: -1px;
+              left: -3px;
             }
           }
         }
@@ -152,7 +157,7 @@
             &:before {
               color: #ffffff;
               content: "\f00d";
-              left: 3px;
+              left: 2.5px;
             }
           }
         }
